--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,6 @@ jspm_packages
 # JuliaDickey/Angular-Template/.gitignore
 node_modules/
 typings/
-app/*.js
-app/*.js.map
+app/**/*.js
+app/**/*.js.map
 npm-debug.log
