--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,8 @@
         },
         "**/*.js.map": true,
         "node_modules": true,
-        "typings": true
+        "typings": true,
+        "npm*": true
     },
     "files.autoSave": "afterDelay"
 }
